# licensor

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  LIST.md  README.md  build.rs
.github/workflows/: build.yml  check.yml  checks.yml  main.yml
licensor_codegen/: Cargo.toml
licensor_codegen/src/: main.rs
licensor_common/: Cargo.toml
licensor_common/src/: lib.rs
licensor_fetch/: Cargo.toml
licensor_fetch/src/: main.rs
resources/: exceptions-schema.json  exceptions.json  help.txt  licenses-schema.json  licenses.json
src/: codegen.rs  main.rs  types.rs
tests/: integration.rs
