[package]
name = "licensor"
version = "1.0.1"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
license = "MIT"
description = "Write a license to standard output given its SPDX ID"
homepage = "https://github.com/raftario/licensor"
repository = "https://github.com/raftario/licensor.git"
readme = "README.md"
keywords = ["license", "cli"]
categories = ["command-line-utilities"]
edition = "2018"
build = "build.rs"
exclude = [
    "/target",
    "**/*.rs.bk",
    ".idea/",
    ".github/",
]

[dependencies]
chrono = "0.4.9"
lazy_static = "1.4.0"
[dependencies.flate2]
version = "1.0.11"
default-features = false
features = ["rust_backend"]

[build-dependencies]
reqwest = "0.9.20"
serde_json = "1.0.40"
[build-dependencies.flate2]
version = "1.0.11"
default-features = false
features = ["rust_backend"]
[build-dependencies.serde]
version = "1.0.101"
features = ["derive"]

[dev-dependencies]
[dev-dependencies.cargo-husky]
version = "1.4.0"
default-features = false
features = [
    "precommit-hook",
    "run-cargo-clippy",
    "run-cargo-fmt",
]
