[package]
name = "licensor"
version = "2.0.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
license = "MIT"
description = "Write a license to standard output given its SPDX ID"
homepage = "https://github.com/raftario/licensor"
repository = "https://github.com/raftario/licensor.git"
readme = "README.md"
keywords = [
    "license",
    "cli",
    "spdx",
    "licensing",
]
categories = ["command-line-utilities"]
edition = "2018"

[workspace]
members = [
    "licensor_codegen",
    "licensor_common",
    "licensor_fetch"
]

[dependencies]
calm_io = "0.1.0"
chrono = "0.4.9"
phf = "0.7.23"
structopt = "0.3.2"
[dependencies.flate2]
version = "1.0.11"
default-features = false
features = ["rust_backend"]
[dependencies.licensor_common]
path = "./licensor_common"
