[package]
name = "licensor"
version = "2.1.0"
authors = ["Raphaël Thériault <raphael_theriault@outlook.com>"]
license = "MIT"
description = "write licenses to stdout"
homepage = "https://github.com/raftario/licensor"
repository = "https://github.com/raftario/licensor.git"
readme = "README.md"
keywords = [
    "license",
    "cli",
    "spdx",
    "licensing",
]
categories = ["command-line-utilities"]
edition = "2018"

[workspace]
members = [
    "licensor_codegen",
    "licensor_common",
    "licensor_fetch"
]

[dependencies]
calm_io = "0.1.1"
chrono = "0.4.9"
phf = "0.7.24"
structopt = "0.3.5"
textwrap = "0.11.0"
[dependencies.flate2]
version = "1.0.13"
default-features = false
features = ["rust_backend"]

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "1.0.2"
[dev-dependencies.cargo-husky]
version = "1.4.0"
default-features = false
features = [
    "run-for-all",
    "precommit-hook",
    "run-cargo-test",
    "run-cargo-clippy",
    "run-cargo-fmt",
]
